css/main.css
.section:not(#photography):not(#footer-bar) { /* Because photography
  section is larger than viewpoint and footer-bar is small */
  position: relative;
  height: 95vh;
}

.section:not(#hero) {
  text-align: center;
}

div a, div a:hover, span {
  color: #339FF0;
  text-decoration: none;
}

/* Font Awesome */
.fab, .far, .fas {
  padding: 5px;
  font-size: 20px;
  text-align: center;
  color: #222;
  vertical-align: middle;
}

img {
  width: 100%;
}

.floating-button {
  position: fixed;
  width: 20px;
  height: 20px;
  text-decoration: none;
}

#up-button {
  bottom: 40px;
  right: 40px;
}

/* Dark Mode */
#dark-button {
  top: 40px;
  right: 40px;
}

.dark-body {
  color: #dcd9d4;
  background-color: #181a1b;
}

.dark-body a {
  color: #dcd9d4;
}

.dark-body hr {
  border-top-color: #393939;
}

